          for convenience)
        * Discovery method, added "Int - Unknown" and "Ext - Unknown" 
        * Hacking variety: Added "Virtual machine escape"
        * Ownership, created enumerations of "Victim", "Employee", "Partner", 
          "Customer", "Unknown", "NA"
        * Management, created enumerations of "Internal", "External", 
          "Unknown","NA"
        * Hosting, created enumerations of "Internal", "External", "Unknown", 
          "NA"
        * accessibility, created enumerations of "External", "Internal", 
          "Isolated", "Unknown", "NA"  
        * Malware variety, added "Click fraud" to represent 
          "Click Fraud/Bitcoin mining"
        * Asset variety, changed "U - ATM" to "T - ATM" (kiosk/public facing
          user device)
        * Asset variety, changed "U - Gas terminal" to "T - Gas terminal" 
          (kiosk/public facing user device)
        * Asset variety, changed "U - PED pad" to "T - PED pad" (kiosk/public
          facing user device)
        * Asset variety, changed "U - Kiosk" to "T - Kiosk" (kiosk/public 
          facing user device)
        * Hacking vector: Added "Partner" to represent partner connection or
          credential
        * Convert the country enumeration to be 2-digit codes from ISO 3166
        * Removing the "role" of the actor, it appears to be highly correlated
          to motive and redundant.
        * Removing value of "S - Other Server" in the asset variety since
          "S - Other" exists
Changes in 1.1 (from initial release)
    Schema changes
        * "security_compromise" field is now required
        * Any field that is an enumeration, and that enumerations has an
          "Unknown" value is now required
        * Malware CVE, Malware name and Hacking name are changed from an array
          to a string
        * Investigation date is no longer required
        * Added support for a "plus" section and allowing it to be anything